NomenclatureExceptionTest